--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,10 @@
   .animate-slide-up {
     animation: slideUp 0.5s ease-out;
   }
+
+  .input {
+    @apply w-full px-4 py-3 border bg-gray-300 border-gray-700 rounded-lg focus:ring-2 focus:ring-teal-400 focus:border-transparent transition-all duration-200 text-black placeholder-slate-700
+  }
 }
 
 /* Custom scrollbar */
